Added extensive javadoc, checkstyle and sonarQube. had to disable some sonarQube practices