@@ -1,27 +1,31 @@
 package edu.ntnu.idi.idatt.view.renderer;
 
-import edu.ntnu.idi.idatt.model.core.actions.ActionType;
+import static java.lang.Math.max;
+import static java.util.Objects.requireNonNull;
+import static java.util.logging.Level.INFO;
+import static java.util.logging.Level.SEVERE;
+import static java.util.logging.Level.WARNING;
+import static java.util.logging.Logger.getLogger;
+import static javafx.application.Platform.runLater;
+import static javafx.scene.text.Font.font;
+
 import edu.ntnu.idi.idatt.model.core.Board;
+import edu.ntnu.idi.idatt.model.core.Player;
 import edu.ntnu.idi.idatt.model.core.Tile;
+import edu.ntnu.idi.idatt.model.core.actions.ActionType;
 import edu.ntnu.idi.idatt.model.core.actions.AsteroidFieldAction;
 import edu.ntnu.idi.idatt.model.core.actions.BoostPadAction;
 import edu.ntnu.idi.idatt.model.core.actions.TileAction;
-import edu.ntnu.idi.idatt.model.core.Player;
 import edu.ntnu.idi.idatt.view.utils.PlayerTokenData;
-
-
 import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.Objects;
-import java.util.logging.Level;
-import java.util.logging.Logger;
+import java.util.Random;
 import javafx.animation.Interpolator;
 import javafx.animation.PauseTransition;
 import javafx.animation.SequentialTransition;
 import javafx.animation.TranslateTransition;
-import javafx.application.Platform;
 import javafx.geometry.Point2D;
 import javafx.scene.Node;
 import javafx.scene.control.Label;
@@ -31,18 +35,27 @@ import javafx.scene.layout.StackPane;
 import javafx.scene.paint.Color;
 import javafx.scene.shape.Circle;
 import javafx.scene.shape.Rectangle;
-import javafx.scene.text.Font;
 import javafx.scene.text.FontWeight;
 import javafx.util.Duration;
 
+
 /**
- * Implements the {@link BoardRenderer} interface to visually render an Astro Rally game board.
- * The board is a 40-tile square loop, similar to a Monopoly board.
- * Player movement animation is designed for clarity and correctness, including delayed secondary moves.
+ * Renders a board and player token movements for the Astro Rally game variant
+ * in a JavaFX application. Implements a "Monopoly"-style loop layout where tiles
+ * wrap around the edges. Handles initial board drawing, token creation, placement,
+ * and animated movements including walk sequences, jumps, and special-tile actions
+ * (boost pads and asteroid fields). All animations are queued on the JavaFX
+ * Application Thread, and detailed logging is provided for debugging.
+ *
+ *
+ * @see BoardRenderer
+ * @see edu.ntnu.idi.idatt.model.core.actions.TileAction
+ * @see javafx.animation.TranslateTransition
  */
 public class AstroRallyRenderer implements BoardRenderer {
 
-  private static final Logger LOGGER = Logger.getLogger(AstroRallyRenderer.class.getName());
+  private static final java.util.logging.Logger LOGGER =
+      getLogger(AstroRallyRenderer.class.getName());
 
   private final Map<Integer, Point2D> tileCenterPositions = new HashMap<>();
   private double calculatedTileSize = 50.0;
@@ -68,94 +81,128 @@ public class AstroRallyRenderer implements BoardRenderer {
   private static final double TOKEN_STROKE_WIDTH = 2.0;
   private static final Color TOKEN_STROKE_COLOR = Color.BLACK;
 
+  /**
+   * Default constructor.
+   *
+   * <p>Intentionally left empty as no initialization beyond field defaults is required.
+   * </p>
+   */
   public AstroRallyRenderer() {
-    LOGGER.fine("AstroRallyRenderer instance created.");
+    // No-op constructor: all setup is handled in renderInitialBoard when called
   }
 
+
+  /**
+   * Renders the board’s tiles into the given pane according to current layout settings.
+   *
+   * @param boardPane the JavaFX Pane into which tile nodes will be added; must not be null
+   * @param board the board model containing tile definitions and count; must not be null
+   */
   @Override
-  public void renderInitialBoard(Pane boardPane, Board board) {
-    Objects.requireNonNull(boardPane, "boardPane cannot be null for rendering");
-    Objects.requireNonNull(board, "board data model cannot be null for rendering");
-    LOGGER.info("Rendering initial Astro Rally board visuals.");
+  public void renderInitialBoard(final Pane boardPane, final Board board) {
+    requireNonNull(boardPane, "boardPane cannot be null for rendering");
+    requireNonNull(board, "board data model cannot be null for rendering");
+    LOGGER.info(() -> "Rendering initial Astro Rally board visuals.");
 
     boardPane.getChildren().clear();
-    tileCenterPositions.clear();
+    this.tileCenterPositions.clear();
 
     this.totalTilesOnBoard = board.getBoardSize();
-    int totalTiles = this.totalTilesOnBoard;
+    final int totalTiles = this.totalTilesOnBoard;
 
     this.tilesPerSideExcludingCorners = 9;
     if (totalTiles != 40 && totalTiles >= 4) {
       if (totalTiles % 4 == 0) {
         this.tilesPerSideExcludingCorners = (totalTiles / 4) - 1;
       } else {
-        LOGGER.warning(
-            "Cannot form a perfect square loop with "
-                + totalTiles
-                + " tiles for Monopoly-style rendering. Using default of 9 for calculations, layout may be imperfect.");
+        LOGGER.log(
+            WARNING,
+            "Cannot form a perfect square loop with {0} tiles for Monopoly-style rendering. "
+                + "Using default of {1} for calculations, layout may be imperfect.",
+            new Object[]{totalTiles, this.tilesPerSideExcludingCorners}
+        );
       }
     } else if (totalTiles < 4 && totalTiles != 0) {
-      LOGGER.warning("Board has less than 4 tiles, Monopoly-style rendering might look odd.");
+      LOGGER.warning(() -> "Board has less than 4 tiles, Monopoly-style rendering might look odd.");
       this.tilesPerSideExcludingCorners = 0;
     }
 
+    double paneWidth = boardPane.getWidth() > 0
+        ? boardPane.getWidth()
+        : boardPane.getPrefWidth();
+    double paneHeight = boardPane.getHeight() > 0
+        ? boardPane.getHeight()
+        : boardPane.getPrefHeight();
 
-    double paneWidth = boardPane.getWidth() > 0 ? boardPane.getWidth() : boardPane.getPrefWidth();
-    double paneHeight = boardPane.getHeight() > 0 ? boardPane.getHeight() : boardPane.getPrefHeight();
+    final int validTilesPerSide = max(0, this.tilesPerSideExcludingCorners);
 
-    int validTilesPerSide = Math.max(0, this.tilesPerSideExcludingCorners);
-
-    if (paneWidth <= 0) paneWidth = (validTilesPerSide + 2) * 50.0;
-    if (paneHeight <= 0) paneHeight = (validTilesPerSide + 2) * 50.0;
-
-
-    int visualGridSize = validTilesPerSide + 2;
-    if (visualGridSize == 0 && totalTiles > 0) visualGridSize = 1;
-    else if (visualGridSize == 0 && totalTiles == 0) {
-      LOGGER.warning("No tiles and zero visual grid size, cannot render board.");
-      return;
+    if (paneWidth <= 0) {
+      paneWidth = (validTilesPerSide + 2) * 50.0;
+    }
+    if (paneHeight <= 0) {
+      paneHeight = (validTilesPerSide + 2) * 50.0;
     }
 
-
-    this.calculatedTileSize = Math.min(paneWidth / visualGridSize, paneHeight / visualGridSize);
+    int visualGridSize = validTilesPerSide + 2;
+    this.calculatedTileSize = Math.min(
+        paneWidth / visualGridSize,
+        paneHeight / visualGridSize
+    );
 
     if (this.calculatedTileSize <= 1.0) {
       this.calculatedTileSize = 20.0;
-      LOGGER.warning( "Calculated tile size very small or zero, defaulted to " + this.calculatedTileSize);
+      LOGGER.log(
+          WARNING,
+          "Calculated tile size very small or zero, defaulted to {0}",
+          this.calculatedTileSize
+      );
     }
 
-    double actualBoardWidth = visualGridSize * this.calculatedTileSize;
-    double actualBoardHeight = visualGridSize * this.calculatedTileSize;
-    this.offsetX = Math.max(0, (paneWidth - actualBoardWidth) / 2.0);
-    this.offsetY = Math.max(0, (paneHeight - actualBoardHeight) / 2.0);
+    final double actualBoardWidth = visualGridSize * this.calculatedTileSize;
+    final double actualBoardHeight = visualGridSize * this.calculatedTileSize;
+    this.offsetX = max(0, (paneWidth - actualBoardWidth) / 2.0);
+    this.offsetY = max(0, (paneHeight - actualBoardHeight) / 2.0);
 
-    Map<Integer, Tile> tilesMap = board.getTiles();
+    final Map<Integer, Tile> tilesMap = board.getTiles();
     for (int i = 1; i <= totalTiles; i++) {
-      Tile tile = tilesMap.get(i);
+      final Tile tile = tilesMap.get(i);
       if (tile != null) {
         createTileVisual(boardPane, tile, totalTiles);
       } else {
-        LOGGER.warning("Tile with ID " + i + " not found in board model during render.");
+        LOGGER.log(
+            WARNING,
+            "Tile with ID {0} not found in board model during render.",
+            i
+        );
       }
     }
-    LOGGER.info("Astro Rally board rendering complete. Calculated tile size: " + calculatedTileSize + " for " + totalTiles + " tiles.");
+    LOGGER.log(
+        INFO,
+        "Astro Rally board rendering complete. Calculated tile size: {0} for {1} tiles.",
+        new Object[]{this.calculatedTileSize, totalTiles}
+    );
   }
 
-  private void createTileVisual(Pane boardPane, Tile tile, int totalBoardTiles) {
-    int tileId = tile.getTileId();
-    int tilesPerFullEdge = Math.max(1, this.tilesPerSideExcludingCorners + 1);
-    Point2D topLeft = calculateMonopolyStyleTilePosition(tileId, tilesPerFullEdge, totalBoardTiles);
+  /**
+   * Creates and adds a single tile visual (rectangle + label) to the board pane.
+   * Also records the tile’s center point for token placement.
+   *
+   * @param boardPane the pane to which the tile node will be added; must not be null
+   * @param tile the Tile model to render; must not be null
+   * @param totalBoardTiles the total number of tiles on the board (for layout math)
+   */
+  private void createTileVisual(final Pane boardPane, final Tile tile,
+      final int totalBoardTiles) {
+    final int tileId = tile.getTileId();
+    final int tilesPerFullEdge = max(1, this.tilesPerSideExcludingCorners + 1);
+    final Point2D topLeft =
+        calculateTilePosition(tileId, tilesPerFullEdge, totalBoardTiles);
 
-    if (topLeft == null) {
-      LOGGER.severe("Failed to calculate position for tile ID: " + tileId);
-      return;
-    }
-
-    Rectangle tileBg = new Rectangle(calculatedTileSize, calculatedTileSize);
+    final Rectangle tileBg = new Rectangle(this.calculatedTileSize, this.calculatedTileSize);
     tileBg.setStroke(TILE_STROKE_COLOR);
     tileBg.setStrokeWidth(TILE_STROKE_WIDTH);
 
-    TileAction action = tile.getLandAction();
+    final TileAction action = tile.getLandAction();
     if (tileId == 1) {
       tileBg.setFill(START_FINISH_TILE_COLOR);
     } else if (action != null && action.getActionType() == ActionType.BOOST_PAD) {
@@ -166,80 +213,111 @@ public class AstroRallyRenderer implements BoardRenderer {
       tileBg.setFill((tileId % 2 == 0) ? DEFAULT_TILE_COLOR_1 : DEFAULT_TILE_COLOR_2);
     }
 
-    Label tileLabel = new Label(String.valueOf(tileId));
-    double fontSize = Math.max(8.0, calculatedTileSize * TILE_NUMBER_FONT_FACTOR);
-    tileLabel.setFont(Font.font("Arial", FontWeight.BOLD, fontSize));
+    final Label tileLabel = new Label(String.valueOf(tileId));
+    tileLabel.setFont(font("Arial", FontWeight.BOLD,
+        max(8.0, this.calculatedTileSize * TILE_NUMBER_FONT_FACTOR)));
     tileLabel.setTextFill(TILE_NUMBER_COLOR);
 
-    StackPane tileNode = new StackPane(tileBg, tileLabel);
+    final StackPane tileNode = new StackPane(tileBg, tileLabel);
     tileNode.setLayoutX(topLeft.getX());
     tileNode.setLayoutY(topLeft.getY());
     tileNode.setUserData(tileId);
 
     boardPane.getChildren().add(tileNode);
 
-    Point2D center = new Point2D(
-        topLeft.getX() + calculatedTileSize / 2.0,
-        topLeft.getY() + calculatedTileSize / 2.0);
-    tileCenterPositions.put(tileId, center);
+    final Point2D center = new Point2D(
+        topLeft.getX() + this.calculatedTileSize / 2.0,
+        topLeft.getY() + this.calculatedTileSize / 2.0);
+    this.tileCenterPositions.put(tileId, center);
   }
 
-  private Point2D calculateMonopolyStyleTilePosition(int tileId, int tilesPerFullEdge, int totalBoardTiles) {
-    if (totalBoardTiles == 0) return new Point2D(offsetX,offsetY);
-    if (tilesPerFullEdge == 0 && totalBoardTiles > 0) tilesPerFullEdge = 1;
+  /**
+   * Computes the top-left position for a tile in the Monopoly-style loop layout.
+   *
+   * @param tileId the 1-based index of the tile to position
+   * @param tilesPerFullEdge number of tiles per side (including corners)
+   * @param totalBoardTiles total number of tiles on the board
+   * @return the Point2D (x,y) where the tile’s top-left corner should be placed
+   */
+  private Point2D calculateTilePosition(
+      final int tileId,
+      int tilesPerFullEdge,
+      final int totalBoardTiles
+  ) {
+    if (totalBoardTiles == 0) {
+      return new Point2D(offsetX, offsetY);
+    }
+    if (tilesPerFullEdge == 0 && totalBoardTiles > 0) {
+      tilesPerFullEdge = 1;
+    }
 
     if (tileId < 1 || tileId > totalBoardTiles) {
-      LOGGER.warning("Invalid tileId " + tileId + " for Monopoly style positioning. Total tiles: " + totalBoardTiles);
-      return new Point2D(offsetX, offsetY);
-    }
-    if (tilesPerFullEdge == 0) {
-      LOGGER.warning("tilesPerFullEdge is zero with totalBoardTiles=" + totalBoardTiles + ". Cannot position tile " + tileId);
+      LOGGER.log(
+          WARNING,
+          "Invalid tileId {0} for Monopoly style positioning. Total tiles: {1}",
+          new Object[]{tileId, totalBoardTiles}
+      );
       return new Point2D(offsetX, offsetY);
     }
 
-
-    double xGrid = 0, yGrid = 0;
+    double Xgrid;
+    double Ygrid;
 
     if (totalBoardTiles == 1) {
-      xGrid = 0;
-      yGrid = 0;
-    } else if (tilesPerSideExcludingCorners == 0 && totalBoardTiles > 0) {
+      Xgrid = 0;
+      Ygrid = 0;
+    } else if (tilesPerSideExcludingCorners == 0) {
       if (tileId <= tilesPerFullEdge) {
-        xGrid = tileId - 1;
-        yGrid = 0;
+        Xgrid = tileId - 1;
       } else {
-        xGrid = 0; yGrid = 0;
+        Xgrid = 0;
       }
-    }
-
-    else if (tileId >= 1 && tileId <= tilesPerFullEdge) {
-      xGrid = tileId - 1;
-      yGrid = tilesPerFullEdge - 1;
-    } else if (tileId > tilesPerFullEdge && tileId <= 2 * tilesPerFullEdge) {
-      xGrid = tilesPerFullEdge - 1;
-      yGrid = (tilesPerFullEdge - 1) - (tileId - (tilesPerFullEdge + 1));
-    } else if (tileId > 2 * tilesPerFullEdge && tileId <= 3 * tilesPerFullEdge) {
-      xGrid = (tilesPerFullEdge - 1) - (tileId - (2 * tilesPerFullEdge + 1));
-      yGrid = 0;
-    } else if (tileId > 3 * tilesPerFullEdge && tileId <= 4 * tilesPerFullEdge) {
-      xGrid = 0;
-      yGrid = tileId - (3 * tilesPerFullEdge + 1);
+      Ygrid = 0;
+    } else if (tileId <= tilesPerFullEdge) {
+      Xgrid = tileId - 1;
+      Ygrid = tilesPerFullEdge - 1;
+    } else if (tileId <= 2 * tilesPerFullEdge) {
+      Xgrid = tilesPerFullEdge - 1;
+      Ygrid = (tilesPerFullEdge - 1) - (tileId - (tilesPerFullEdge + 1));
+    } else if (tileId <= 3 * tilesPerFullEdge) {
+      Xgrid = (tilesPerFullEdge - 1) - (tileId - (2 * tilesPerFullEdge + 1));
+      Ygrid = 0;
+    } else if (tileId <= 4 * tilesPerFullEdge) {
+      Xgrid = 0;
+      Ygrid = tileId - (3 * tilesPerFullEdge + 1);
     } else {
-      LOGGER.warning("TileId " + tileId + " out of calculable range for Monopoly style positioning. Defaulting. tilesPerFullEdge=" + tilesPerFullEdge);
+      LOGGER.log(
+          WARNING,
+          "TileId {0} out of calculable range for Monopoly style positioning. "
+              + "Defaulting. tilesPerFullEdge={1}",
+          new Object[]{tileId, tilesPerFullEdge}
+      );
       if (tilesPerFullEdge > 0) {
-        return new Point2D(offsetX, offsetY + (tilesPerFullEdge - 1) * calculatedTileSize);
+        return new Point2D(
+            offsetX,
+            offsetY + (tilesPerFullEdge - 1) * calculatedTileSize
+        );
       }
       return new Point2D(offsetX, offsetY);
     }
-    return new Point2D(offsetX + xGrid * calculatedTileSize, offsetY + yGrid * calculatedTileSize);
+
+    return new Point2D(
+        offsetX + Xgrid * calculatedTileSize,
+        offsetY + Ygrid * calculatedTileSize
+    );
   }
 
+  /**
+   * Creates a circular token node for the given player.
+   *
+   * @param player the Player for whom to create the token; must not be null
+   * @return a JavaFX Node (Circle) styled and sized for the player
+   */
   @Override
-  public Node createPlayerTokenNode(Player player) {
-    Objects.requireNonNull(player, "Player cannot be null for token creation");
-    LOGGER.finer(() -> "Creating token for player: " + player.getName());
+  public Node createPlayerTokenNode(final Player player) {
+    requireNonNull(player, "Player cannot be null for token creation");
 
-    Circle token = new Circle(calculatedTileSize * TOKEN_RADIUS_FACTOR);
+    final Circle token = new Circle(this.calculatedTileSize * TOKEN_RADIUS_FACTOR);
     token.setStroke(TOKEN_STROKE_COLOR);
     token.setStrokeWidth(TOKEN_STROKE_WIDTH);
     token.setFill(getPlayerColor(player));
@@ -248,97 +326,144 @@ public class AstroRallyRenderer implements BoardRenderer {
     return token;
   }
 
-  private Color getPlayerColor(Player player) {
+  private Color getPlayerColor(final Player player) {
     if (player.getPieceType() != null) {
-      switch (player.getPieceType().toLowerCase()) {
-        case "interceptor": return Color.CRIMSON;
-        case "novajumper": return Color.DEEPSKYBLUE;
-        case "warpcruiser": return Color.MEDIUMPURPLE;
-        default: break;
+      final String pieceTypeLower = player.getPieceType().toLowerCase();
+      switch (pieceTypeLower) {
+        case "dragon" -> {
+          return Color.CRIMSON;
+        }
+        case "battleship" -> {
+          return Color.DEEPSKYBLUE;
+        }
+        case "dog" -> {
+          return Color.MEDIUMPURPLE;
+        }
+        case "car" -> {
+          return Color.VIOLET;
+        }
+        case "hat" -> {
+          return Color.TOMATO;
+        }
+        default -> {
+          return Color.TURQUOISE;
+        }
       }
     }
-    int hash = player.getName().hashCode();
-    java.util.Random random = new java.util.Random(hash);
-    return Color.rgb(random.nextInt(206) + 50, random.nextInt(206) + 50, random.nextInt(206) + 50, 0.95);
+    final int hash = player.getName().hashCode();
+    final Random random = new Random(hash);
+    return Color.rgb(random.nextInt(206) + 50,
+        random.nextInt(206) + 50,
+        random.nextInt(206) + 50, 0.95);
   }
 
+  /**
+   * Immediately positions a player token node at the center of the specified tile.
+   * Updates the node’s user data to reflect the new tile ID.
+   *
+   * @param playerTokenNode the token Node to place; must not be null
+   * @param tile the Tile on which to place the token; must not be null
+   * @param boardPane the Pane containing the board (unused here but part of interface);
+   *                  must not be null
+   */
   @Override
-  public void placePlayerTokenAtTile(Node playerTokenNode, Tile tile, Pane boardPane) {
-    Objects.requireNonNull(playerTokenNode, "Player token node cannot be null.");
-    Objects.requireNonNull(tile, "Tile cannot be null for placement.");
+  public void placePlayerTokenAtTile(
+      final Node playerTokenNode,
+      final Tile tile,
+      final Pane boardPane
+  ) {
+    requireNonNull(playerTokenNode, "Player token node cannot be null.");
+    requireNonNull(tile, "Tile cannot be null for placement.");
 
-    int tileId = tile.getTileId();
-    Point2D targetCenter = tileCenterPositions.get(tileId);
+    final int tileId = tile.getTileId();
+    final Point2D targetCenter = tileCenterPositions.get(tileId);
 
     if (targetCenter == null) {
-      LOGGER.log(Level.SEVERE, "Cannot place player token: No center position found for tile ID {0}.", tileId);
+      LOGGER.log(
+          SEVERE,
+          "Cannot place player token: No center position found for tile ID {0}.",
+          new Object[]{tileId}
+      );
       return;
     }
 
     commitTokenPosition(playerTokenNode, targetCenter);
 
-    Object currentUserData = playerTokenNode.getUserData();
-    if (currentUserData instanceof Player) {
-      playerTokenNode.setUserData(new PlayerTokenData((Player) currentUserData, tileId));
-    } else if (currentUserData instanceof PlayerTokenData) {
-      ((PlayerTokenData) currentUserData).setCurrentTileId(tileId);
-    } else {
-      LOGGER.log(Level.WARNING, "PlayerTokenNode's UserData was not Player or PlayerTokenData. UserData: {0}", currentUserData);
+    final Object currentUserData = playerTokenNode.getUserData();
+    switch (currentUserData) {
+      case Player player -> playerTokenNode.setUserData(new PlayerTokenData(player, tileId));
+
+      case PlayerTokenData ptd -> ptd.setCurrentTileId(tileId);
+
+      default -> LOGGER.log(
+          WARNING,
+          "PlayerTokenNode's UserData was not Player or PlayerTokenData. UserData: {0}",
+          currentUserData
+      );
     }
-    LOGGER.log(Level.FINE, "Player token placed and committed at tile {0}.", tileId);
   }
 
-  private void commitTokenPosition(Node token, Point2D targetCenter) {
-    Objects.requireNonNull(token, "Token cannot be null for commitPosition.");
-    Objects.requireNonNull(targetCenter, "TargetCenter cannot be null for commitPosition.");
 
-    double tokenWidth = token.getBoundsInLocal().getWidth();
-    double tokenHeight = token.getBoundsInLocal().getHeight();
+  private void commitTokenPosition(final Node token, final Point2D targetCenter) {
+    requireNonNull(token, "Token cannot be null for commitPosition.");
+    requireNonNull(targetCenter, "TargetCenter cannot be null for commitPosition.");
 
-    token.setLayoutX(targetCenter.getX() - tokenWidth / 2.0);
-    token.setLayoutY(targetCenter.getY() - tokenHeight / 2.0);
+    token.setLayoutX(targetCenter.getX() - token.getBoundsInLocal().getWidth() / 2.0);
+    token.setLayoutY(targetCenter.getY() - token.getBoundsInLocal().getHeight() / 2.0);
     token.setTranslateX(0);
     token.setTranslateY(0);
-    LOGGER.log(Level.FINEST, "Token position committed to layout center: {0}", targetCenter);
   }
 
-  private void updateTokenData(Node tokenNode, int newTileId) {
-    Objects.requireNonNull(tokenNode, "TokenNode cannot be null for updateTokenData.");
-    if (tokenNode.getUserData() instanceof PlayerTokenData) {
-      PlayerTokenData data = (PlayerTokenData) tokenNode.getUserData();
+  private void updateTokenData(final Node tokenNode, final int newTileId) {
+    requireNonNull(tokenNode, "TokenNode cannot be null for updateTokenData.");
+    if (tokenNode.getUserData() instanceof PlayerTokenData data) {
       data.setCurrentTileId(newTileId);
-      LOGGER.log(Level.FINER, "PlayerTokenData updated: Player {0} is now on tile {1}.",
-          new Object[]{data.getPlayer().getName(), newTileId});
     } else {
-      LOGGER.log(Level.WARNING, "Failed to update token data: UserData is not PlayerTokenData. UserData: {0}",
+      LOGGER.log(WARNING,
+          "Failed to update token data: UserData is not PlayerTokenData. UserData: {0}",
           tokenNode.getUserData() != null ? tokenNode.getUserData().getClass().getName() : "null");
     }
   }
 
+  /**
+   * Animates a token moving along the board according to dice outcome,
+   * then performs any landing-tile action animation, and finally invokes callback.
+   *
+   * @param playerTokenNode the token Node to animate; must have PlayerTokenData userData
+   * @param targetTileAfterDiceRoll the destination Tile after rolling dice; must not be null
+   * @param boardPane the Pane containing the board and tokens; must not be null
+   * @param onOverallAnimationComplete a callback Runnable to invoke when all animations finish
+   */
   @Override
-  public void updatePlayerTokenPosition(Node playerTokenNode, Tile targetTileAfterDiceRoll, Pane boardPane, Runnable onOverallAnimationComplete) {
-    Objects.requireNonNull(playerTokenNode, "PlayerTokenNode cannot be null.");
-    Objects.requireNonNull(targetTileAfterDiceRoll, "TargetTileAfterDiceRoll cannot be null.");
+  public void updatePlayerTokenPosition(final Node playerTokenNode,
+      final Tile targetTileAfterDiceRoll, final Pane boardPane,
+      final Runnable onOverallAnimationComplete) {
+    requireNonNull(playerTokenNode, "PlayerTokenNode cannot be null.");
+    requireNonNull(targetTileAfterDiceRoll, "TargetTileAfterDiceRoll cannot be null.");
 
-    if (!(playerTokenNode.getUserData() instanceof PlayerTokenData)) {
-      LOGGER.log(Level.SEVERE, "Cannot animate token: UserData is not PlayerTokenData. UserData: {0}",
-          playerTokenNode.getUserData() != null ? playerTokenNode.getUserData().getClass().getName() : "null");
+    if (!(playerTokenNode.getUserData() instanceof PlayerTokenData tokenData)) {
+      LOGGER.log(SEVERE,
+          "Cannot animate token: UserData is not PlayerTokenData. UserData: {0}",
+          playerTokenNode.getUserData() != null
+              ? playerTokenNode.getUserData().getClass().getName() : "null");
       runFinalCallback(onOverallAnimationComplete);
       return;
     }
-    PlayerTokenData tokenData = (PlayerTokenData) playerTokenNode.getUserData();
-    Player player = tokenData.getPlayer();
+    final Player player = tokenData.getPlayer();
+    final int currentTileId = tokenData.getCurrentTileId();
+    final int diceRollDestinationTileId = targetTileAfterDiceRoll.getTileId();
 
-    int currentTileId = tokenData.getCurrentTileId();
-    int diceRollDestinationTileId = targetTileAfterDiceRoll.getTileId();
-
-    LOGGER.log(Level.INFO, "Starting animation for {0}: From tile {1} to dice roll destination {2}.",
+    LOGGER.log(INFO,
+        "Starting animation for {0}: From tile {1} to dice roll destination {2}.",
         new Object[]{player.getName(), currentTileId, diceRollDestinationTileId});
 
-    Point2D startPositionCenter = tileCenterPositions.get(currentTileId);
+    final Point2D startPositionCenter = this.tileCenterPositions.get(currentTileId);
     if (startPositionCenter == null) {
-      LOGGER.log(Level.SEVERE, "Animation failed: No center position for current start tile ID {0}. Attempting to place at final destination.", currentTileId);
-      Point2D emergencyEndCenter = tileCenterPositions.get(diceRollDestinationTileId);
+      LOGGER.log(SEVERE,
+          "Animation failed: No center position for current start tile ID {0}."
+              + " Attempting to place at final destination.", currentTileId);
+      final Point2D emergencyEndCenter =
+          this.tileCenterPositions.get(diceRollDestinationTileId);
       if (emergencyEndCenter != null) {
         commitTokenPosition(playerTokenNode, emergencyEndCenter);
         updateTokenData(playerTokenNode, diceRollDestinationTileId);
@@ -350,154 +475,191 @@ public class AstroRallyRenderer implements BoardRenderer {
     commitTokenPosition(playerTokenNode, startPositionCenter);
 
     if (currentTileId == diceRollDestinationTileId) {
-      LOGGER.log(Level.FINE, "Player {0} rolled to the same tile ({1}). Checking for action jump.", new Object[]{player.getName(), currentTileId});
       handleActionVisuals(playerTokenNode, targetTileAfterDiceRoll, onOverallAnimationComplete);
       return;
     }
 
-    List<Integer> path = calculatePath(currentTileId, diceRollDestinationTileId);
+    final List<Integer> path = calculatePath(currentTileId, diceRollDestinationTileId);
     if (path.isEmpty()) {
-      LOGGER.log(Level.WARNING, "Animation path from {0} to {1} is empty. Processing as if on target.",
-          new Object[]{currentTileId, diceRollDestinationTileId});
-      Point2D targetCenter = tileCenterPositions.get(diceRollDestinationTileId);
+      LOGGER.log(WARNING, "Animation path from {0} to {1} is empty."
+          + " Processing as if on target.", new Object[]{currentTileId, diceRollDestinationTileId});
+      final Point2D targetCenter = this.tileCenterPositions.get(diceRollDestinationTileId);
       if (targetCenter != null) {
         commitTokenPosition(playerTokenNode, targetCenter);
         updateTokenData(playerTokenNode, diceRollDestinationTileId);
       } else {
-        LOGGER.log(Level.SEVERE, "Cannot commit to empty path target: Missing center for tile ID {0}.", diceRollDestinationTileId);
+        LOGGER.log(SEVERE,
+            "Cannot commit to empty path target: Missing center for tile ID {0}.",
+            diceRollDestinationTileId);
       }
       handleActionVisuals(playerTokenNode, targetTileAfterDiceRoll, onOverallAnimationComplete);
       return;
     }
 
-    SequentialTransition walkAnimation = new SequentialTransition(playerTokenNode);
-    List<TranslateTransition> walkTransitions = buildWalkTransitions(path, startPositionCenter);
+    final SequentialTransition walkAnimation = new SequentialTransition(playerTokenNode);
+    final List<TranslateTransition> walkTransitions =
+        buildWalkTransitions(path, startPositionCenter);
     walkAnimation.getChildren().addAll(walkTransitions);
 
     walkAnimation.setOnFinished(walkEvent -> {
-      LOGGER.log(Level.FINE, "Walk animation for {0} to tile {1} completed.", new Object[]{player.getName(), diceRollDestinationTileId});
-      Point2D diceLandCenter = tileCenterPositions.get(diceRollDestinationTileId);
+      final Point2D diceLandCenter = this.tileCenterPositions.get(diceRollDestinationTileId);
       if (diceLandCenter != null) {
         commitTokenPosition(playerTokenNode, diceLandCenter);
         updateTokenData(playerTokenNode, diceRollDestinationTileId);
       } else {
-        LOGGER.log(Level.SEVERE, "Failed to commit after walk: No center for dice roll destination tile ID {0}.", diceRollDestinationTileId);
+        LOGGER.log(SEVERE,
+            "Failed to commit after walk: No center for dice roll destination tile ID {0}.",
+            diceRollDestinationTileId);
       }
       handleActionVisuals(playerTokenNode, targetTileAfterDiceRoll, onOverallAnimationComplete);
     });
     walkAnimation.play();
   }
 
-  private void handleActionVisuals(Node playerTokenNode, Tile landTile, Runnable onOverallAnimationComplete) {
-    PlayerTokenData tokenData = (PlayerTokenData) playerTokenNode.getUserData();
-    Player player = tokenData.getPlayer();
-    int tileLandedOnId = landTile.getTileId();
+  private void handleActionVisuals(final Node playerTokenNode, final Tile landTile,
+      final Runnable onOverallAnimationComplete) {
+    if (!(playerTokenNode.getUserData() instanceof PlayerTokenData tokenData)) {
+      LOGGER.log(SEVERE, "Action visuals: UserData is not PlayerTokenData. UserData: {0}",
+          playerTokenNode.getUserData() != null
+              ? playerTokenNode.getUserData().getClass().getName() : "null");
+      runFinalCallback(onOverallAnimationComplete);
+      return;
+    }
 
-    TileAction action = landTile.getLandAction();
+    final Player player = tokenData.getPlayer();
+    final int tileLandedOnId = landTile.getTileId();
+    final TileAction action = landTile.getLandAction();
     int effectSteps = 0;
 
-    if (action instanceof BoostPadAction) {
-      effectSteps = ((BoostPadAction) action).consumeLastDeterminedMovementEffectSteps();
-    } else if (action instanceof AsteroidFieldAction) {
-      effectSteps = ((AsteroidFieldAction) action).consumeLastDeterminedMovementEffectSteps();
+    if (action instanceof BoostPadAction boostAction) {
+      effectSteps = boostAction.consumeLastDeterminedMovementEffectSteps();
+    } else if (action instanceof AsteroidFieldAction asteroidAction) {
+      effectSteps = asteroidAction.consumeLastDeterminedMovementEffectSteps();
     }
 
     if (effectSteps != 0) {
-      Point2D actionTileCenter = tileCenterPositions.get(tileLandedOnId);
+      final Point2D actionTileCenter = this.tileCenterPositions.get(tileLandedOnId);
       if (actionTileCenter == null) {
-        LOGGER.log(Level.SEVERE, "Cannot perform secondary move for {0}: action tile {1} has no center.", new Object[]{player.getName(), tileLandedOnId});
+        LOGGER.log(SEVERE,
+            "Cannot perform secondary move for {0}: action tile {1} has no center.",
+            new Object[]{player.getName(), tileLandedOnId});
         runFinalCallback(onOverallAnimationComplete);
         return;
       }
 
-      List<Integer> secondaryPathTileIds = calculateRelativePath(tileLandedOnId, effectSteps);
+      final List<Integer> secondaryPathTileIds =
+          calculateRelativePath(tileLandedOnId, effectSteps);
       if (secondaryPathTileIds.isEmpty()) {
-        LOGGER.log(Level.WARNING, "Secondary move path for {0} from {1} by {2} steps is empty or invalid. No secondary animation.", new Object[]{player.getName(), tileLandedOnId, effectSteps});
+        LOGGER.log(WARNING,
+            "Secondary move path for {0} from {1} by {2} steps is empty or invalid."
+                + " No secondary animation.",
+            new Object[]{player.getName(), tileLandedOnId, effectSteps});
         runFinalCallback(onOverallAnimationComplete);
         return;
       }
 
-      final int finalDestinationAfterSecondaryMoveId = secondaryPathTileIds.get(secondaryPathTileIds.size() - 1);
+      final int finalDestId = secondaryPathTileIds.getLast();
+      final PauseTransition pause = new PauseTransition(DELAY_BEFORE_SECONDARY_MOVE);
+      final List<TranslateTransition> secondaryTransitions =
+          buildWalkTransitions(secondaryPathTileIds, actionTileCenter);
+      final SequentialTransition secondaryWalk = new SequentialTransition(playerTokenNode);
+      secondaryWalk.getChildren().addAll(secondaryTransitions);
+      final SequentialTransition delayedEffectAnim = new SequentialTransition(pause, secondaryWalk);
 
-      PauseTransition pause = new PauseTransition(DELAY_BEFORE_SECONDARY_MOVE);
-      List<TranslateTransition> secondaryWalkTransitions = buildWalkTransitions(secondaryPathTileIds, actionTileCenter);
-      SequentialTransition secondaryWalkAnimation = new SequentialTransition(playerTokenNode);
-      secondaryWalkAnimation.getChildren().addAll(secondaryWalkTransitions);
-      SequentialTransition delayedEffectAnimation = new SequentialTransition(pause, secondaryWalkAnimation);
-
-      delayedEffectAnimation.setOnFinished(event -> {
-        Point2D finalCommitCenter = tileCenterPositions.get(finalDestinationAfterSecondaryMoveId);
+      delayedEffectAnim.setOnFinished(event -> {
+        final Point2D finalCommitCenter = this.tileCenterPositions.get(finalDestId);
         if (finalCommitCenter != null) {
           commitTokenPosition(playerTokenNode, finalCommitCenter);
-          updateTokenData(playerTokenNode, finalDestinationAfterSecondaryMoveId);
+          updateTokenData(playerTokenNode, finalDestId);
         } else {
-          LOGGER.log(Level.SEVERE, "Cannot commit after secondary move for {0}: final tile {1} has no center.", new Object[]{player.getName(), finalDestinationAfterSecondaryMoveId});
+          LOGGER.log(SEVERE,
+              "Cannot commit after secondary move for {0}: final tile {1} has no center.",
+              new Object[]{player.getName(), finalDestId});
         }
-        LOGGER.log(Level.FINE, "Delayed effect animation for {0} to tile {1} completed.", new Object[]{player.getName(), finalDestinationAfterSecondaryMoveId});
         runFinalCallback(onOverallAnimationComplete);
       });
 
-      LOGGER.log(Level.INFO, "Player {0} on action tile {1} (effect: {2} steps). Starting delay then secondary move to {3}.", new Object[]{player.getName(), tileLandedOnId, effectSteps, finalDestinationAfterSecondaryMoveId});
-      delayedEffectAnimation.play();
+      LOGGER.log(INFO,
+          "Player {0} on action tile {1} (effect: {2} steps)."
+              + " Starting delay then secondary move to {3}.",
+          new Object[]{player.getName(), tileLandedOnId, effectSteps, finalDestId});
+      delayedEffectAnim.play();
 
-    } else if (action != null && action.getDestinationTileId() > 0 && action.getDestinationTileId() != tileLandedOnId) {
-      int jumpDestinationTileId = action.getDestinationTileId();
-      LOGGER.log(Level.INFO, "Player {0} on tile {1} triggered predefined jump to tile {2}.",
-          new Object[]{player.getName(), tileLandedOnId, jumpDestinationTileId});
+    } else if (action != null && action.getDestinationTileId() > 0
+        && action.getDestinationTileId() != tileLandedOnId) {
+      final int jumpDestId = action.getDestinationTileId();
+      LOGGER.log(INFO, "Player {0} on tile {1} triggered predefined jump to tile {2}.",
+          new Object[]{player.getName(), tileLandedOnId, jumpDestId});
 
-      Point2D jumpFromCenter = tileCenterPositions.get(tileLandedOnId);
-      Point2D jumpToCenter = tileCenterPositions.get(jumpDestinationTileId);
+      final Point2D jumpFromCenter = this.tileCenterPositions.get(tileLandedOnId);
+      final Point2D jumpToCenter = this.tileCenterPositions.get(jumpDestId);
 
       if (jumpFromCenter != null && jumpToCenter != null) {
-        TranslateTransition jumpAnimation = buildJumpTransition(playerTokenNode, jumpFromCenter, jumpToCenter);
-        jumpAnimation.setOnFinished(jumpEvent -> {
-          updateTokenData(playerTokenNode, jumpDestinationTileId);
-          LOGGER.log(Level.FINE, "Predefined action jump for {0} to tile {1} completed.", new Object[]{player.getName(), jumpDestinationTileId});
+        final TranslateTransition jumpAnim =
+            buildJumpTransition(playerTokenNode, jumpFromCenter, jumpToCenter);
+        jumpAnim.setOnFinished(jumpEvent -> {
+          updateTokenData(playerTokenNode, jumpDestId);
           runFinalCallback(onOverallAnimationComplete);
         });
-        jumpAnimation.play();
+        jumpAnim.play();
       } else {
-        LOGGER.log(Level.WARNING, "Cannot execute predefined action jump for {0}: Missing tile center. From: {1} (center: {2}), To: {3} (center: {4}). Finalizing animation.",
-            new Object[]{player.getName(), tileLandedOnId, jumpFromCenter, jumpDestinationTileId, jumpToCenter});
+        LOGGER.log(WARNING,
+            "Cannot execute predefined action jump for {0}: Missing tile center."
+                + " From: {1} (center: {2}), To: {3} (center: {4}). Finalizing animation.",
+            new Object[]{player.getName(), tileLandedOnId, jumpFromCenter,
+                jumpDestId, jumpToCenter});
         runFinalCallback(onOverallAnimationComplete);
       }
     } else {
-      LOGGER.log(Level.FINE, "No further jump or delayed effect action for {0} from tile {1}. Animation sequence ends here.", new Object[]{player.getName(), tileLandedOnId});
       runFinalCallback(onOverallAnimationComplete);
     }
   }
 
+  /**
+   * Immediately animates a token jumping from its current tile to the given target tile,
+   * then updates the token’s user data and invokes the completion callback.
+   *
+   * @param playerTokenNode the token Node to animate; must have PlayerTokenData userData
+   * @param targetTile the Tile to which the token will jump; must not be null
+   * @param boardPane the Pane containing the board and tokens; must not be null
+   * @param onAnimationComplete a callback Runnable to invoke when the jump animation finishes
+   */
   @Override
-  public void animateTokenDirectly(Node playerTokenNode, Tile targetTile, Pane boardPane, Runnable onAnimationComplete) {
-    Objects.requireNonNull(playerTokenNode, "PlayerTokenNode cannot be null.");
-    Objects.requireNonNull(targetTile, "TargetTile cannot be null.");
+  public void animateTokenDirectly(final Node playerTokenNode, final Tile targetTile,
+      final Pane boardPane, final Runnable onAnimationComplete) {
+    requireNonNull(playerTokenNode, "PlayerTokenNode cannot be null.");
+    requireNonNull(targetTile, "TargetTile cannot be null.");
 
-    if (!(playerTokenNode.getUserData() instanceof PlayerTokenData)) {
-      LOGGER.log(Level.SEVERE, "Cannot animate token directly: UserData not PlayerTokenData. UserData: {0}",
-          playerTokenNode.getUserData() != null ? playerTokenNode.getUserData().getClass().getName() : "null");
+    if (!(playerTokenNode.getUserData() instanceof PlayerTokenData tokenData)) {
+      LOGGER.log(SEVERE,
+          "Cannot animate token directly: UserData not PlayerTokenData. UserData: {0}",
+          playerTokenNode.getUserData() != null
+              ? playerTokenNode.getUserData().getClass().getName() : "null");
       runFinalCallback(onAnimationComplete);
       return;
     }
-    PlayerTokenData tokenData = (PlayerTokenData) playerTokenNode.getUserData();
-    Player player = tokenData.getPlayer();
+    final Player player = tokenData.getPlayer();
+    final int currentTileId = tokenData.getCurrentTileId();
+    final int destinationTileId = targetTile.getTileId();
 
-    int currentTileId = tokenData.getCurrentTileId();
-    int destinationTileId = targetTile.getTileId();
-
-    LOGGER.log(Level.INFO, "Animating {0} directly from tile {1} to {2}.",
+    LOGGER.log(INFO, "Animating {0} directly from tile {1} to {2}.",
         new Object[]{player.getName(), currentTileId, destinationTileId});
 
-    Point2D currentPositionCenter = tileCenterPositions.get(currentTileId);
-    Point2D destinationPositionCenter = tileCenterPositions.get(destinationTileId);
+    final Point2D currentPositionCenter = this.tileCenterPositions.get(currentTileId);
+    final Point2D destinationPositionCenter = this.tileCenterPositions.get(destinationTileId);
 
     if (destinationPositionCenter == null) {
-      LOGGER.log(Level.SEVERE, "Direct animation failed: No center for destination tile ID {0}. Token remains at {1}.",
+      LOGGER.log(SEVERE,
+          "Direct animation failed: No center for destination tile ID {0}."
+              + " Token remains at {1}.",
           new Object[]{destinationTileId, currentTileId});
       runFinalCallback(onAnimationComplete);
       return;
     }
     if (currentPositionCenter == null) {
-      LOGGER.log(Level.WARNING, "Direct animation: No center for current tile ID {0}. Committing to destination {1}.",
+      LOGGER.log(WARNING,
+          "Direct animation: No center for current tile ID {0}."
+              + " Committing to destination {1}.",
           new Object[]{currentTileId, destinationTileId});
       commitTokenPosition(playerTokenNode, destinationPositionCenter);
       updateTokenData(playerTokenNode, destinationTileId);
@@ -508,29 +670,37 @@ public class AstroRallyRenderer implements BoardRenderer {
     commitTokenPosition(playerTokenNode, currentPositionCenter);
 
     if (currentTileId == destinationTileId) {
-      LOGGER.log(Level.FINE, "{0} is already at direct target tile {1}. No animation needed.", new Object[]{player.getName(), destinationTileId});
       runFinalCallback(onAnimationComplete);
       return;
     }
 
-    TranslateTransition jumpAnimation = buildJumpTransition(playerTokenNode, currentPositionCenter, destinationPositionCenter);
+    final TranslateTransition jumpAnimation =
+        buildJumpTransition(playerTokenNode, currentPositionCenter, destinationPositionCenter);
     jumpAnimation.setOnFinished(event -> {
       updateTokenData(playerTokenNode, destinationTileId);
-      LOGGER.log(Level.FINE, "Direct animation for {0} to tile {1} completed.", new Object[]{player.getName(), destinationTileId});
       runFinalCallback(onAnimationComplete);
     });
     jumpAnimation.play();
   }
 
-  private List<TranslateTransition> buildWalkTransitions(List<Integer> pathTileIds, Point2D initialLayoutCenter) {
-    List<TranslateTransition> transitions = new ArrayList<>();
-    for (int tileIdInPath : pathTileIds) {
-      Point2D targetCenter = tileCenterPositions.get(tileIdInPath);
+  /**
+   * Builds a list of TranslateTransition steps that move a token along the given path.
+   *
+   * @param pathTileIds the sequence of tile IDs to traverse
+   * @param initialLayoutCenter the starting center position for the first move
+   * @return a List of TranslateTransitions to play in sequence
+   */
+  private List<TranslateTransition> buildWalkTransitions(final List<Integer> pathTileIds,
+      final Point2D initialLayoutCenter) {
+    final List<TranslateTransition> transitions = new ArrayList<>();
+    for (final int tileIdInPath : pathTileIds) {
+      final Point2D targetCenter = this.tileCenterPositions.get(tileIdInPath);
       if (targetCenter == null) {
-        LOGGER.log(Level.WARNING, "BuildWalk: Skipping step to missing tile ID {0}.", tileIdInPath);
+        LOGGER.log(WARNING, "BuildWalk: Skipping step to missing tile ID {0}.",
+            tileIdInPath);
         continue;
       }
-      TranslateTransition step = new TranslateTransition(MOVE_ANIMATION_DURATION);
+      final TranslateTransition step = new TranslateTransition(MOVE_ANIMATION_DURATION);
       step.setToX(targetCenter.getX() - initialLayoutCenter.getX());
       step.setToY(targetCenter.getY() - initialLayoutCenter.getY());
       step.setInterpolator(Interpolator.LINEAR);
@@ -539,10 +709,11 @@ public class AstroRallyRenderer implements BoardRenderer {
     return transitions;
   }
 
-  private TranslateTransition buildJumpTransition(Node tokenNode, Point2D jumpFromCenter, Point2D jumpToCenter) {
+  private TranslateTransition buildJumpTransition(final Node tokenNode,
+      final Point2D jumpFromCenter, final Point2D jumpToCenter) {
     commitTokenPosition(tokenNode, jumpFromCenter);
 
-    TranslateTransition jump = new TranslateTransition(JUMP_ANIMATION_DURATION, tokenNode);
+    final TranslateTransition jump = new TranslateTransition(JUMP_ANIMATION_DURATION, tokenNode);
     jump.setFromX(0);
     jump.setFromY(0);
     jump.setToX(jumpToCenter.getX() - jumpFromCenter.getX());
@@ -553,24 +724,26 @@ public class AstroRallyRenderer implements BoardRenderer {
     return jump;
   }
 
-  private void runFinalCallback(Runnable callback) {
+  private void runFinalCallback(final Runnable callback) {
     if (callback != null) {
-      Platform.runLater(callback);
+      runLater(callback);
     }
   }
 
-  private List<Integer> calculatePath(int startId, int endId) {
-    List<Integer> path = new ArrayList<>();
+  private List<Integer> calculatePath(final int startId, final int endId) {
+    final List<Integer> path = new ArrayList<>();
     if (startId == endId) {
       return path;
     }
 
     int currentId = startId;
-    int safetyBreak = this.totalTilesOnBoard * 2;
+    final int safetyBreak = this.totalTilesOnBoard * 2;
     int count = 0;
 
     if (this.totalTilesOnBoard <= 0) {
-      LOGGER.log(Level.SEVERE, "Cannot calculate path: totalTilesOnBoard is not positive ({0})", this.totalTilesOnBoard);
+      LOGGER.log(SEVERE,
+          "Cannot calculate path: totalTilesOnBoard is not positive ({0})",
+          this.totalTilesOnBoard);
       return path;
     }
 
@@ -583,27 +756,28 @@ public class AstroRallyRenderer implements BoardRenderer {
       count++;
     }
     if (count >= safetyBreak) {
-      LOGGER.log(Level.SEVERE, "Path calculation exceeded safety break. Start: {0}, End: {1}, Path: {2}",
+      LOGGER.log(SEVERE,
+          "Path calculation exceeded safety break. Start: {0}, End: {1}, Path: {2}",
           new Object[]{startId, endId, path});
       return new ArrayList<>();
     }
-    LOGGER.log(Level.FINEST, "Calculated path from {0} to {1}: {2}", new Object[]{startId, endId, path});
     return path;
   }
 
-  private List<Integer> calculateRelativePath(int startId, int steps) {
-    List<Integer> path = new ArrayList<>();
+  private List<Integer> calculateRelativePath(final int startId, final int steps) {
+    final List<Integer> path = new ArrayList<>();
     if (steps == 0) {
       return path;
     }
 
     int currentId = startId;
-    int numStepsToTake = Math.abs(steps);
-    boolean forward = steps > 0;
-    int boardSize = this.totalTilesOnBoard;
+    final int numStepsToTake = Math.abs(steps);
+    final boolean forward = steps > 0;
+    final int boardSize = this.totalTilesOnBoard;
 
     if (boardSize <= 0) {
-      LOGGER.log(Level.SEVERE, "Cannot calculate relative path: boardSize is not positive ({0})", boardSize);
+      LOGGER.log(SEVERE,
+          "Cannot calculate relative path: boardSize is not positive ({0})", boardSize);
       return path;
     }
 
@@ -621,7 +795,6 @@ public class AstroRallyRenderer implements BoardRenderer {
       }
       path.add(currentId);
     }
-    LOGGER.log(Level.FINEST, "Calculated relative path from {0} by {1} steps: {2}", new Object[]{startId, steps, path});
     return path;
   }
 }
